--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.0.0",
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
+    "ngx-mask": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
